[project]
name = "final-year-project-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "mne>=1.10.2",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pyedflib>=0.1.42",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
]
